--- a/css/global.css
+++ b/css/global.css
@@ -31,3 +31,10 @@
   font-size: 2.5vh;
   color: black;
 }
+
+hr.type_6 {
+  border: 0;
+  height: 55px;
+  background-image: url(image/type_6.png);
+  background-repeat: no-repeat;
+}
